Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-10-14 (SVN):
    * utils Makefiles: Removed the extra "bin" directory, removed the
      DESTDIR from the makefiles and BIN_DIR from the scripts. Added
      distclean target to all makefiles. Adjusted the rpm spec file
      for the build system changes.
    * Added new ReleaseNotes-1.5.1 document. Only two entries for now,
      will grow as we move on.

2011-10-14 (SVN):
    * libs/timidity/Makefile: Made clean to remove libtimidity.a too.
    * Makefiles: Renamed all "cleaner" targets to "distclean". Added
      distclean to most Makefiles who were lacking it.
    * engine Makefiles: Added new localclean target to clean only in the
      working directory. Made the clean targets to clean libs/timidity
      too. Adjusted quick-build scripts to use localclean as necessary.

2011-10-14 (SVN):
    * quakedef.h: updated beta datestamp to 2011-10-14.

2011-10-14 (SVN):
    * sbar.c (SB_InvChanged): Further cleanup for startpos adjustments.

2011-10-13 (SVN):
    * sbar.c (SB_InvChanged): Fixed a nit from previous patch when there
      are no items in the inventory.

2011-10-13 (SVN):
    * sbar.c (SB_InvChanged): Commented out original code which used to
      break start position of the scrolling inventory and made sure that
      the start position is set correctly upon an inventory change.

2011-10-13 (SVN):
    * Applied the engine-side mkdir and getuserdir changes to the gtk-
      launcher code.

2011-10-13 (SVN):
    * Updated some of the web links in the documents.

2011-10-09 (SVN):
    * quakedef.h: updated beta datestamp to 2011-10-09.

2011-10-09 (SVN):
    * server.h, world.c: Removed definition of DAMAGE_AIM which has never
      been used. Added comments about some other spawn and entity flags.

2011-10-09 (SVN):
    * cl_demo.c (CL_WriteDemoMessage): Removed the unnecessary check for
      cls.demorecording.

2011-10-08 (SVN):